# smstrikers-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  imgui.ini
assets/: README.md  assets.json
docs/: ASSETS.md  README.md  asset_format.md
game_assets/: .gitignore
include/: asset_loader.h  asset_tree.h  asset_tree_view.h  camera.h  config.h  mesh.h  viewer.h
src/: asset_loader.cpp  asset_tree.cpp  asset_tree_view.cpp  camera.cpp  config.cpp  main.cpp  mesh.cpp  viewer.cpp
